objects/infy_dm__Data_Masking_Object_Config__c.object
<CustomObject>
    <fields>
        <fullName>infy_dm__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If it is checked the Job would be visisble to the Users else not</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>infy_dm__ByPassTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checkbox to By pass the Trigger Code when Data Masking need not to be executed.</description>
        <label>Deactivate Work Flow Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>infy_dm__Bypass_WorkflowRule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass WorkflowRule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>infy_dm__Data_Masking_Status__c</fullName>
        <label>Data Masking Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>infy_dm__Description__c</fullName>
        <description>Description of the Job</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>infy_dm__Error_Log_File__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Error Log File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>infy_dm__Exclude_Record_Type__c</fullName>
        <label>Exclude Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infy_dm__ExtId__c</fullName>
        <externalId>true</externalId>
        <label>ExtId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infy_dm__Is_Exclude_Recordtype__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Excluded Record Types</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>infy_dm__Job_Name__c</fullName>
        <description>Auto job names</description>
        <label>Job Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>infy_dm__Last_Masked_On__c</fullName>
        <description>Last date when masking was done</description>
        <label>Last Masked On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>infy_dm__Number_Of_Attcahments__c</fullName>
        <label>Number Of Attcahments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>infy_dm__Record_Type_Exculded__c</fullName>
        <label>Record Type Exculded</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infy_dm__Records_Processed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Records Processed</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Data Masking Object Config</label>
    <listViews>
        <fullName>infy_dm__Object_View</fullName>
        <columns>infy_dm__Job_Name__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>infy_dm__Number_Of_Attcahments__c</columns>
        <columns>infy_dm__Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>Object View</label>
    </listViews>
    <nameField>
        <label>Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Masking Object Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>